--- a/StackOverFaux.Web/Views/Home/Tags.cshtml
+++ b/StackOverFaux.Web/Views/Home/Tags.cshtml
@@ -26,7 +26,7 @@
 {
 	using (profiler.Step("Snag TagCount"))
 	{ 
-		<p>@Model.TagCount.tagname @Model.TagCount.counttag</p>
+		<p> @Model.TagCount</p>
 	}
 }
 
